# inplace_factory

./: .gitignore  .hgignore  CMakeLists.txt  Makefile  const_algo.hh  inplace_factory.cc  inplace_factory.hh  pack_traits.hh
examples/: example.cc
inplace/: copy_move_semantics.hh  factory.hh  geometry.hh  pack_traits.hh
tests/: Makefile  group_exceptions.cc  group_mixed.cc  group_multi.cc  group_nocopy.cc  group_nocopy_nomove.cc  group_nomove.cc  group_plain.cc  group_references.cc  test.cc
